--- a/TreeTracker/Resources/Development.xcconfig
+++ b/TreeTracker/Resources/Development.xcconfig
@@ -24,3 +24,5 @@ TREE_PHOTO_SIZE_HIGH = 1000
 TREE_PHOTO_COMPRESSION_LOW = 1.0
 TREE_PHOTO_COMPRESSION_MEDIUM = 1.0
 TREE_PHOTO_COMPRESSION_HIGH = 1.0
+
+ROOT_URL = dev-k8s.treetracker.org
